--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ flask-marshmallow==0.12.0
 Flask-Migrate==2.5.3
 Flask-SocketIO==4.3.0
 Flask-SQLAlchemy==2.4.3
+Flask-WTF==0.14.3
 greenlet==0.4.15
 gunicorn==18.0
 idna==2.9
@@ -44,3 +45,4 @@ toml==0.10.1
 urllib3==1.25.9
 Werkzeug==1.0.1
 wrapt==1.12.1
+WTForms==2.3.1
